# jsbridge-in-rust

./: .gitignore
backend/: Cargo.toml
backend/src/: lib.rs  main.rs  utils.rs
backend/src/core/: event.rs
backend/src/core/handler/: download.rs  get_system_info.rs  mod.rs
backend/src/ipc/: action.rs  event.rs  mod.rs  system.rs
frontend/: package-lock.json
frontend/src/: App.vue  main.ts  types.d.ts
frontend/src/bridge/: api.ts  constant.ts  index.ts  ipc.ts
