[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wry = "0.23.4"
serde = "1.0.152"
serde_json = { version = "1.0.0", features = ["default"] }
sysinfo = "0.27.2"
once_cell = "1.17.0"